# sda-backend

./: .gitignore  README.MD  manage.py  pyproject.toml  shell_interaction_example.txt
accounts/: admin.py  filters.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: password_change_form.html  profile.html
data/: movies.csv
sda_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
viewer/: admin.py  fields.py  filters.py  forms.py  models.py  urls.py  views.py
viewer/management/commands/: delete_duplicate_movies.py  first_name_user_count.py  get_active_nongmail_users.py  get_superusers.py  get_user.py  gmail_users.py  load_movies.py
viewer/migrations/: 0001_initial.py  0002_movie.py  0003_profile.py  0004_delete_profile.py
viewer/templates/: base.html  genre_detail.html  genre_form.html  genre_list.html  index.html  login_form.html  movie_create.html  movie_detail.html  movie_form.html  movie_list.html  navbar.html  obj_create_form.html  obj_delete_form.html  profile.html  sign_up_form.html
viewer/templatetags/: tt_utils.py
