[tool.poetry]
name = "sda-backend"
version = "0.1.0"
description = ""
authors = ["silox <edruisl99@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.15"
ipython = "7.34.0"
django-silk = "^5.2.0"
django-debug-toolbar = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

